--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,11 @@
 **/interface/GUI_fused_HyperSpec/
 **/interface/run_HyperSpectral/
 
+ID2A/HS_Analysis/HIMIP/20191007_solsa_himip/Archive_Thanh/*
+HIMIP\20191007_solsa_himip\Archive_Thanh\*
+20191007_solsa_himip/Archive_Thanh/*
+Archive_Thanh/*
+ID2A/HS_Analysis/HIMIP/Hyperspectral_GUI/*
+ID2A/HS_Analysis/HIMIP/Hyper_Spectral_Libraries/*
+
 **.exe
