--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
 # Folders
-Archive_Thanh/*
-Hyper_Spectral_Libraries/*
-Hyperspectral_GUI/*
+Archive_Thanh
+Hyper_Spectral_Libraries
+Hyperspectral_GUI
 
 # Files
 **.prj
